package com.telran.Homework_20240607.mvp.view;

public interface View {
    String get();

    void print(String message);
}
