package com.telran.Homework_20240607.shapes;

public abstract class Shape {
    abstract double getArea();
}
